# rocq-prob-spec

./: .gitignore  .nra.cache  Makefile  _CoqProject  abstract.md  boyer-moore-car-vars.pl  boyer-moore-car.pl
prolog_experiments/: boyer-moore-car-vars.pl  boyer_moore_car.pl  car_markov.pl  lists.pl  toy-car-vars.pl  toy_car.pl
theories/: boyer-moore-car.v  boyer_moore_car.v  car_crash.v  coin_toss.v  lists.v  toy-car-vars.v  toy-car.v  toy_car.v  toy_car_vars.v
windController/: README.md  windController.vclo
windController/controller-result/: safe.vcl-plan
windController/rocqProof/: #WindControllerSpec.v#  .WindControllerSpec.aux  CoqMakefile.conf  SafetyProof.v  Std.v  Tensor.glob  Tensor.v  Tensor.vo  WindControllerSpec.glob  WindControllerSpec.v  WindControllerSpec.vo  _CoqProject  std.v
windController/rocqProof/vehicle/: .CoqMakefile.d  .std.aux  .tensor.aux  CoqMakefile.conf  _CoqProject  std.glob  std.v  std.vo  tensor.glob  tensor.vo  vehicle-rocq.opam
